--- a/Lentokonepeli/gamesite.html
+++ b/Lentokonepeli/gamesite.html
@@ -13,10 +13,44 @@
     <title>Working title</title>
 </head>
 <body>
+    <!-- nettisivu main.py pelille -->
+    <header>
+        <h1>Working title</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="gamesite.html">Game</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+  <!-- leaflet kartta johon tulee pisteet main.py listasta -->
+
 <main class="flex-wrap">
             <div id="map">
-                <!-- <img class="responsive-img" src="img/finland.svg" alt="map of finland"> -->
+                <img class="responsive-img" src="img/finland.svg" alt="map of finland" >
             </div>
+        <div class="kama">
+            <div id="score">
+                <h2>Score</h2>
+                <p id="scoretext">0</p>
+            </div>
+            <div id="timer">
+                <h2>Time left</h2>
+                <p id="timertext">0</p>
+            </div>
+            <div id="gameover">
+                <h2>Game over</h2>
+                <p id="gameovertext">0</p>
+            </div>
+            <div id="highscore">
+                <h2>Highscore</h2>
+                <p id="highscoretext">0</p>
+            </div>
+            <div id="restart">
+                <button id="restartbutton">Restart</button>
+            </div>
+        </div>
 </main>
 </body>
 </html>
