--- a/Lentokonepeli/gamesite.html
+++ b/Lentokonepeli/gamesite.html
@@ -30,7 +30,7 @@
   <body>
     <!-- nettisivu main.py pelille -->
     <header>
-      <h1>Working title</h1>
+      <h1>Mestari varas</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -39,7 +39,6 @@
         </ul>
       </nav>
     </header>
-    <!-- leaflet kartta johon tulee pisteet main.py listasta -->
 
     <main class="flex-wrap">
       <div id="map">
@@ -50,26 +49,36 @@
         />
       </div>
       <div class="kama">
-        <div id="score">
-          <h2>Score</h2>
-          <p id="scoretext">0</p>
+        <h1>Game stats</h1>
+
+
+        <div id="Moneybox">
+          <h2>Money</h2>
+          <p id="Money">0</p>
         </div>
-        <div id="timer">
-          <h2>Time left</h2>
-          <p id="timertext">0</p>
+        <div id="Timebox">
+          <h2>Time</h2>
+          <p id="Time">0</p>
         </div>
-        <div id="gameover">
-          <h2>Game over</h2>
-          <p id="gameovertext">0</p>
+        <div id="CO2box">
+          <h2>CO2</h2>
+          <p id="CO2">0</p>
         </div>
-        <div id="highscore">
-          <h2>Highscore</h2>
-          <p id="highscoretext">0</p>
+        <div id="WeatherBox">
+          <h2>Weather</h2>
+          <p id="Weather">0</p>
         </div>
-        <div id="restart">
-          <button id="restartbutton">Restart</button>
+        <div id="RangeBox">
+          <h2>Range</h2>
+          <p id="Range">0</p>
+        <div id="start">
+          <button id="startbutton">Start</button>
         </div>
       </div>
+      
     </main>
+    <footer>
+        <h1>Fly safe</h1> 
+      </footer>
   </body>
 </html>
