--- a/Lentokonepeli/gamesite.html
+++ b/Lentokonepeli/gamesite.html
@@ -71,6 +71,7 @@
         <div id="RangeBox">
           <h2>Range</h2>
           <p id="Range">0</p>
+          </div>
         <div id="start">
           <button id="startbutton">Start</button>
         </div>
