--- a/Lentokonepeli/gamesite.html
+++ b/Lentokonepeli/gamesite.html
@@ -50,6 +50,10 @@
       </div>
       <div class="kama">
         <h1>Game stats</h1>
+                <div id="Locationbox">
+          <h2>Location</h2>
+          <p id="Location">0</p>
+        </div>
 
 
         <div id="Moneybox">
