stattien päivitys+sää hommia+reset+riskit

--- a/Lentokonepeli/gamesite.html
+++ b/Lentokonepeli/gamesite.html
@@ -76,7 +76,10 @@
           <h2>Range</h2>
           <p id="Range">0</p>
           </div>
-        <div id="start">
+        <div id="reset">
+          <button id="resetbutton">Reset</button>
+        </div>
+                <div id="start">
           <button id="startbutton">Start</button>
         </div>
       </div>
