--- a/Lentokonepeli/gamesite.html
+++ b/Lentokonepeli/gamesite.html
@@ -88,5 +88,15 @@
     <footer>
         <h1>Fly safe</h1> 
       </footer>
+      <dialog>
+        <img src="winner.PNG" alt="Victory!">
+        <h2>Congratulations, you won the game!</h2>
+        <div id="victoryreset">
+          <a id="victoryresetbutton" href="gamesite.html">New Game</a>
+        </div>
+        <div id="victoryhome">
+          <a id="victoryhomebutton" href="index.html">Home</a>
+        </div>
+    </dialog>
   </body>
 </html>
