--- a/Lentokonepeli/gamesite.html
+++ b/Lentokonepeli/gamesite.html
@@ -77,10 +77,10 @@
           <p id="Range">0</p>
           </div>
         <div id="reset">
-          <button id="resetbutton">Reset</button>
+          <button id="resetbutton">Reset Game</button>
         </div>
                 <div id="start">
-          <button id="startbutton">Start</button>
+          <button id="startbutton">Start/Refresh Game</button>
         </div>
       </div>
       
