--- a/Lentokonepeli/gamesite.html
+++ b/Lentokonepeli/gamesite.html
@@ -50,11 +50,10 @@
       </div>
       <div class="kama">
         <h1>Game stats</h1>
-                <div id="Locationbox">
+        <div id="Locationbox">
           <h2>Location</h2>
           <p id="Location">0</p>
         </div>
-
 
         <div id="Moneybox">
           <h2>Money</h2>
@@ -75,28 +74,29 @@
         <div id="RangeBox">
           <h2>Range</h2>
           <p id="Range">0</p>
-          </div>
-        <div id="reset">
-          <button id="resetbutton">Reset Game</button>
         </div>
-                <div id="start">
-          <button id="startbutton">Start/Refresh Game</button>
+        <div id="reset">
+          <button class="button" id="resetbutton">Reset Game</button>
+        </div>
+        <div id="start">
+          <button class="button" id="startbutton" role="startbutton">
+            Start/Refresh Game
+          </button>
         </div>
       </div>
-      
     </main>
     <footer>
-        <h1>Fly safe</h1> 
-      </footer>
-      <dialog>
-        <img src="winner.PNG" alt="Victory!">
-        <h2>Congratulations, you won the game!</h2>
-        <div id="victoryreset">
-          <a id="victoryresetbutton" href="gamesite.html">New Game</a>
-        </div>
-        <div id="victoryhome">
-          <a id="victoryhomebutton" href="index.html">Home</a>
-        </div>
+      <h1>Fly safe</h1>
+    </footer>
+    <dialog>
+      <img src="winner.PNG" alt="Victory!" />
+      <h2>Congratulations, you won the game!</h2>
+      <div id="victoryreset">
+        <a id="victoryresetbutton" href="gamesite.html">New Game</a>
+      </div>
+      <div id="victoryhome">
+        <a id="victoryhomebutton" href="index.html">Home</a>
+      </div>
     </dialog>
   </body>
 </html>
