--- a/Lentokonepeli/about.html
+++ b/Lentokonepeli/about.html
@@ -7,10 +7,10 @@
     <link href="gamestyle.css" rel="stylesheet" />
     <title>Working title</title>
   </head>
-  <body>
-    <!-- nettisivu main.py pelille -->
+  <body > 
+    <div id="about">
     <header>
-      <h1>Mestari varas</h1>
+      <h1>Mestarivaras</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -20,7 +20,8 @@
       </nav>
     </header>
 
-
+<p>Metropolian ohjelmointi 1 ja 2 kurssien projekti luoda peli käyttäen pythonia, javascriptiä, mariadb sekä html. pelin ovat tehneet ryhmä 10 </p>
+</div>
     </main>
     <footer>
         <h1>Fly safe</h1>
