--- a/Lentokonepeli/index.html
+++ b/Lentokonepeli/index.html
@@ -30,7 +30,7 @@
   <body>
     <!-- nettisivu main.py pelille -->
     <header>
-      <h1>Mestari varas</h1>
+      <h1>Mestarivaras</h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -39,7 +39,10 @@
         </ul>
       </nav>
     </header>
-
+<div id="home">
+  <h1>Tervetuloa peliin Mestarivaras</h1>
+<p>Pelissä sinun on tarkoitus kerätä rahaa 500000€ verran ryöstelemällä lentokenttiä. Kartalla näet erilaisia kenttiä mihin pystyt lentämään. Lennettyäsi kentälle paina uudestaan kentän kuvaketta. sinulle aukee kentän valikko missä voit joko ryöstää tai päivittää konetta.  jokaisella kentällä lukee riskinumero. riskinumero kertoo sinulle kuinka suuri todennäköisyys sinulla on jäädä kiinni. Jos ryöstö onnistui, sinä saat ilmoitetun määrän rahaa. Jos taas ryöstö epäonnistui, joudut lahjomaan tuomarin ja menetät rahaa Voit myös päivittää lentokoneesi ominaisuuksia jokaisella lentokentällä. pelin tavoitteena on mahdollisimman lyhyessä ajassa, mahdollisimman pienellä co2 päästöillä ryöstää tarvittava summa rahaa. pisteesi määräytyvät näiden perusteella.</p>
+</div>
 
     </main>
     <footer>
