--- a/Lentokonepeli/gamesite.html
+++ b/Lentokonepeli/gamesite.html
@@ -27,7 +27,7 @@
     <script src="gamesite.js" defer></script>
     <title>Working title</title>
   </head>
-  <body>
+  <body id="main">
     <!-- nettisivu main.py pelille -->
     <header>
       <h1>Mestarivaras</h1>
