--- a/Lentokonepeli/index.html
+++ b/Lentokonepeli/index.html
@@ -45,8 +45,10 @@
 </div>
 
     </main>
-    <footer>
+    <div id="kokeilu">
+    <footer >
         <h1>Fly safe</h1>
       </footer>
+    </div>
   </body>
 </html>
