--- a/Lentokonepeli/about.html
+++ b/Lentokonepeli/about.html
@@ -23,8 +23,10 @@
 <p>Metropolian ohjelmointi 1 ja 2 kurssien projekti luoda peli käyttäen pythonia, javascriptiä, mariadb sekä html. pelin ovat tehneet ryhmä 10 </p>
 </div>
     </main>
-    <footer>
+    <div id="kokeilu">
+    <footer >
         <h1>Fly safe</h1>
       </footer>
+    </div>
   </body>
 </html>
