--- a/Lentokonepeli/about.html
+++ b/Lentokonepeli/about.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
 
-<p>Metropolian ohjelmointi 1 ja 2 kurssien projekti luoda peli käyttäen pythonia, javascriptiä, mariadb sekä html. pelin ovat tehneet ryhmä 10 </p>
+<p>Metropolian ohjelmointi 1 ja 2 kurssien projekti luoda peli käyttäen pythonia, javascriptiä, mariadb sekä HTML+CSS. Pelin ovat tehneet ryhmä 10. </p>
 </div>
     </main>
     <div id="kokeilu">
